--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
+        android:name=".App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -15,7 +16,7 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name=".SearchActivity"
+            android:name=".activity.SearchActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,8 +24,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ArtworkDetailActivity" />
-        <activity android:name=".ActressInfoActivity" />
+        <activity android:name=".activity.ArtworkDetailActivity" />
+        <activity android:name=".activity.ActressInfoActivity" />
+        <activity android:name=".activity.ArtworkListActivity" />
+        <activity android:name=".activity.AboutActivity" />
     </application>
 
 </manifest>
