--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.application'
 
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 android {
     compileSdkVersion 27
     defaultConfig {
@@ -33,7 +34,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     implementation 'org.jsoup:jsoup:1.9.2'
     implementation 'com.github.bumptech.glide:glide:4.8.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
+    kapt 'com.github.bumptech.glide:compiler:4.8.0'
     implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.37'
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     implementation 'io.reactivex.rxjava2:rxjava:2.1.14'
@@ -48,5 +49,7 @@ dependencies {
     implementation 'com.github.yuwenque:JarvisDownloader:0.4.2'
     implementation project(':datacontentlayout')
     implementation 'com.fivehundredpx:greedo-layout:1.1.0'
+    implementation 'com.bm.photoview:library:1.4.1'
+    implementation 'com.github.chrisbanes:PhotoView:2.1.3'
 
 }
