--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,8 +9,8 @@ android {
         applicationId "ywq.ares.funapp"
         minSdkVersion 19
         targetSdkVersion 27
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "1.0.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -20,6 +20,10 @@ android {
         }
     }
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 kapt {
     generateStubs = true
@@ -51,5 +55,4 @@ dependencies {
     implementation 'com.fivehundredpx:greedo-layout:1.1.0'
     implementation 'com.bm.photoview:library:1.4.1'
     implementation 'com.github.chrisbanes:PhotoView:2.1.3'
-
 }
